--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="locomotive.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div id="mini-circle"></div>
     <div id="main">
         <div id="hero">
             <div id="nav">
@@ -14,18 +22,88 @@
                 <h4>MENU+</h4>
             </div>
             <div id="Heading">
-                <h1>Product</h1>
-                <div id="text-right">
-                    <h1 id="secondh1">Designer</h1>
-                    <h5>based in toronto</h5>
+                <div class="bounding">
+                    <h1 class="boundingelem">Product</h1>
                 </div>
-                
+                <div id="text-right">
+                    <div class="bounding">
+                        <h1 class="boundingelem" id="secondh1">Designer</h1>
+                    </div>
+                    <div class="bounding">
+                        <h5 class="boundingelem">based in toronto</h5>
+                    </div>
+
+                </div>
+            </div>
+            <div id="chhoti-heading">
+                <div class="bounding">
+                    <h5 class="boundingelem">available for freelancer</h5>
+                </div>
+                <div class="bounding">
+                    <h5 class="boundingelem">work from home</h5>
+                </div>
+
+            </div>
+            <div id="hero-footer">
+                <a href="#">Currently working at google <i class="ri-arrow-right-up-line"></i></a>
+                <a href="#">protopie ambassador <i class="ri-arrow-right-up-line"></i></a>
+                <div id="iconset">
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                    <div class="circle"><i class="ri-arrow-down-line"></i></div>
+                </div>
+            </div>
+        </div>
+        <div id="second">
+            <div class="elem">
+                <img src="./plug.png" alt="">
+                <h1>the Plug</h1>
+                <h5>2023</h5>
+            </div>
+            <div class="elem">
+                <img src="./ixperience.png" alt="">
+                <h1>Ixperience</h1>
+                <h5>2023</h5>
+            </div>
+            <div class="elem elemlast">
+                <img src="hudu.png" alt="">
+                <h1>hudu</h1>
+                <h5>2023</h5>
+            </div>
+        </div>
+
+        <div id="about">
+            <img src="./cynthia.png" alt="">
+            <div id="text-about">
+
+                <h5>(About me)</h5>
+                <p>I'm a product designer with a passion for creating products that not only look good but also solve
+                    real problems. When I'm not sketching ideas on paper, you can find me binge-watching a Netflix
+                    series or playing video games. My design philosophy is simple: make it visually appealing,
+                    functional, and bring a smile to people's faces. I'm the designer you want on your team if you want
+                    to make people say 'I need that in my life!'.
+
+                </p>
+                <a href="#">Lets talk's</a>
+            </div>
+        </div>
+        <div id="Subscribe">
+            <h5>(forgot to mention)</h5>
+            <h3>Subscribe to my youtube channel</h3>
+        </div>
+        <div id="footer">
+            <div class="footer-left">
+                <h5>2023 &copy;</h5>
+                <h5>0:05 AM EST</h5>
+            </div>
+            <div class="footer-right">
+                <a href="#">dribble</a><a href="#">instagram</a><a href="#">lindin</a><a href="#">twitter</a>
             </div>
         </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
 
     <script src="script.js"></script>
 </body>
+
 </html>
